--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
   "peerDependencies": {
     "@angular/animations": ">=10.1.5",
     "@angular/common": ">=10.1.5",
+    "@angular/compiler": ">=10.1.5",
     "@angular/core": ">=10.1.5",
-    "@angular/forms": ">=10.1.5",
-    "@angular/compiler": ">=10.1.5"
+    "@angular/forms": ">=10.1.5"
   },
   "keywords": [
     "angular tag input",
